<resources>
    <string name="app_name">exedex</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_cancel">Cancel</string>
    <string name="gotham">Gotham_Book.otf</string>
    <string name="medium">Gotham-Medium.otf</string>
    <string name="gotham_book">Gotham_Book.otf</string>
    <string name="gotham_medium">Gotham-Medium.otf</string>
    <string name="gotham_light"> Gotham-Light.otf</string>
    <string name="open_sarif">OpenSans-Regular.ttf</string>
    <string name="company_name">COMPANY NAME</string>
    <string name="password">PASSWORD</string>
    <string name="company_id">EMPLOYEE ID</string>
    <string name="str_forgot_password">Forgot Password ? </string>
    <string name="taken">Taken</string>
    <string name="balance">Balance</string>
    <string name="pending_approved">Pending Approval</string>
    <string name="annual_leave">Annual Leave</string>
    <string name="holiday">Holiday</string>
    <string name="pending_leave">Pending Leave</string>
    <string name="approved_leave">Approved Leave</string>
    <string name="salary_slip">Salary Slip</string>
    <string name="download">Download</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="attendance">Attendance</string>
    <string name="leave">Leave</string>
    <string name="claims">Claims</string>
    <string name="shift_change">Shift Change</string>
    <string name="approvals">Approvals</string>
    <string name="pay_slip">Payslips</string>
    <string name="employee_directory">Employee Directory</string>
    <string name="inbox">Inbox</string>
    <string name="request">Requests</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="request_details">Request Details</string>
    <string name="leave_details">Leave Detail</string>
    <string name="date">Date</string>
    <string name="request_type">Request Type</string>
    <string name="status">Status</string>
    <string-array name="leave_duration">
        <item>Full Day</item>
        <item>Half Day</item>
    </string-array>
    <string-array name="leave_code">
        <item>Privilege Leave</item>
        <item>Sick Leave</item>
        <item>Casual Leave</item>
        <item>Paternity/Maternity Leave</item>
    </string-array>
    <string name="submit">Submit</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="from_date">Form Date</string>
    <string name="str_date">Date</string>
    <string name="from_date_colon">Form Date :</string>
    <string name="to_date">To Date</string>
    <string name="str_time">Time</string>
    <string name="to_date_colon">To Date :</string>
    <string name="description">Description</string>
    <string name="leave_type">Leave Type</string>
    <string name="carry_forward">Carry Forward</string>
    <string name="leave_form">Leave Form</string>
    <string name="new_claim">New Claim</string>
    <string name="from_place">From Place</string>
    <string name="to_place">To Place</string>
    <string name="mode_of_travel">Mode Of Travel</string>
    <string name="claim_details">Expense Details</string>
    <string-array name="claim_type">
        <item>Leave</item>
        <item>Mark Attendance</item>
        <item>Correction Attendance</item>
        <item>Regularize Attendance</item>
        <item>Travel Claim</item>
        <item>Reimbursement Claim</item>
        <item>Advance claim</item>
    </string-array>
    <string name="amount">Amount</string>
    <string name="attachment">Attachment</string>
    <string name="air">Air</string>
    <string name="train">Train</string>
    <string name="bus">Bus</string>
    <string name="car_bike">Car/Bike</string>
    <string name="attachment_ur_file">Attach Your File</string>
    <string name="add_claim_Details">Add Expense Detail</string>
    <string name="log_in">LOG IN</string>
    <string name="enter_fromplace">Enter From Place</string>
    <string name="enter_toplace">Enter To Place</string>
    <string name="enter_purposeofvisit">Enter Purpose Of Visit</string>
    <string name="enterclaimdetails">Enter Minimum One Claim Details</string>
    <string name="selectmodeoftravel">Select Mode Of Travel</string>
    <string name="enterexpenseamount">Enter Expense Amount</string>
    <string name="emp_details">Employee Details</string>
    <string name="office_no">Office Number</string>
    <string name="personal_no">Personal Number</string>
    <string name="email">Email</string>
    <string name="emp_id">Employee ID</string>
    <string name="department">Department</string>
    <string name="date_of_join">Date of Join</string>
    <string-array name="blood_group">
        <item>O-</item>
        <item>O+</item>
        <item> A-</item>
        <item> A+</item>
        <item> B-</item>
        <item> B+</item>
        <item> AB-</item>
        <item> AB+</item>
    </string-array>
    <string name="contact">Contact</string>
    <string name="basic_info">Basic Information</string>
    <string name="profile">Profile</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="transition_user_image">transition:user_image</string>
    <string name="transition_logo">transition:logo</string>
    <string name="transition_logo_hris">transition:logo_hris</string>
    <string name="transition_user_name">transition:user_name</string>
    <string name="transition_user_dept">transition:user_dept</string>
    <string name="transition_user_leave_icon">transition:user_leave_icon</string>
    <string name="transition_user_leave_reason">transition:user_leave_reason</string>
    <string name="transition_name">transition:name</string>
    <string name="shift_name">Shift Name</string>
    <string name="reason_details">Reason in detail</string>
    <string name="reset">Reset</string>
    <string name="edit_shift_change">Edit Shift Change</string>
    <string name="add_attendance_request">Add Attendance Request</string>
    <string name="str_correction_request">Attendance Correction Request</string>
    <string name="str_correction_Regularisation_request">Attendance Regularization Request</string>
    <string name="decline">Decline</string>
    <string name="approve">Approve</string>
    <string name="chat_details">Chat Details</string>
    <string name="home_title">HRiS 365</string>
    <string name="str_submit">SUBMIT</string>
    <string name="okey">OK</string>
    <string name="str_regularization_text">Regularization Category</string>
    <string name="str_next_day_out">Next Day Out</string>
    <string name="str_correction_text">Correction Category</string>
    <string name="str_error_desc">Please enter description.</string>
    <string name="no_data">No Data Found</string>
    <string name="str_location">Your Location</string>
    <string name="str_mark_attendance">Mark Attendance</string>
    <string name="str_mark_attendance_image">Mark Attendance Image</string>
    <string name="errorRequirePermission">Application must require the permission to complete the action.</string>
    <string name="str_punch_in">Punch In</string>
    <string name="str_punch_out">Punch Out</string>
    <string name="str_punch_in_title">Are you sure you want to send punch in request.</string>
    <string name="str_punch_out_title">Are you sure you want to send punch out request.</string>
    <string name="str_enter_description">Enter Description</string>
    <string name="str_error_domain_name">Enter Company name.</string>
    <string name="str_error_emp_id">Enter Employee Id.</string>
    <string name="str_error_password">Enter Password.</string>
    <string name="str_attendance_correction">Attendance Correction</string>
    <string name="str_regularization_attendance">Regularize Attendance</string>
    <string name="str_from_date">From Date</string>
    <string name="str_to_date">To Date</string>
    <string name="str_from_time">From TIme</string>
    <string name="str_to_time">To Time</string>
    <string name="nointernet">No internet connection found.</string>
    <string name="str_mark_attandance">Mark Attandance</string>
    <string name="str_claim">Claims</string>
    <string name="str_select_all">Select All</string>
    <string name="str_accepted">ACCEPT</string>
    <string name="str_reject">REJECT</string>
    <string name="str_search_text">Search Text</string>
    <string name="str_search">Search</string>
    <string name="str_resubmit">RESUBMIT</string>
    <string name="next">NEXT</string>
    <string name="for_date">For Date</string>
    <string name="str_error_loaction">Sorry we are not able to find your location.</string>
    <string name="str_apply_leave">Apply Leave</string>
    <string name="error_no_item">Shift Name should not be empty.</string>
    <string name="type_your_message">Type Your Message...</string>
    <string name="str_reset">RESET</string>
    <string name="str_previous_leave">Previous Approvals</string>
    <string name="str_approval_details">Approval Details</string>
    <string name="str_expense_claim_details">Approval Details</string>
    <string name="approval_claim_list">approval_claim_list</string>
    <string-array name="menu_list">
        <item>@string/home</item>
        <item>@string/attendance</item>
        <item>@string/leave</item>
        <item>@string/claims</item>
        <item>@string/shift_change</item>
        <item>@string/approvals</item>
        <item>@string/pay_slip</item>
        <item>@string/employee_directory</item>
        <item>@string/inbox</item>
    </string-array>
    <string-array name="shift_names">
        <item>First Shift</item>
        <item>Night Shift</item>
        <item>General Shift</item>
    </string-array>
    <string-array name="requset_name">
        <item>Will be on training</item>
        <item>Attend Seminar</item>
        <item>Working on outside</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shift_change_detail">Shift Detail</string>
    <string name="str_upload_photo">Upload Photo</string>
    <string name="str_cancel_attendance">Cancel Attendance</string>
    <string name="reason_for_cancellation">Reason for cancellation:</string>
    <string name="recieptno">Reciept No (Optional)</string>
    <string name="metro">Metro</string>
    <string name="non_metro">Non Metro</string>
    <string name="str_travel_claim">Business Trip</string>
    <string name="str_other_claim">Other Claim</string>
    <string name="str_punch_detail">Punch Detail</string>
    <string name="effective_month_year">Effective Month - Year</string>
    <string name="purpose_of_visit">Purpose Of Visit</string>
    <string name="hint_meeting">Eg. Meeting</string>
    <string name="eligible_amount">Eligible Amount</string>
    <string name="ahemdabad">Ahmedabad</string>
    <string name="gandhinagar">Gandhinagar</string>
    <string name="_100">100</string>
    <string name="claim_type_other">Other</string>
    <string name="approval_type_expense_claim">expenseclaim</string>
    <string name="approval_type_mark_attendence">markattendance</string>
    <string name="approval_type_regularization">regularization</string>
    <string name="approval_type_correction">correction</string>
    <string name="approval_type_shift">shift</string>
    <string name="approval_type_leave">leave</string>
    <string name="receipt_number">Receipt Number :</string>
</resources>