<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_bg"
        android:clickable="true"
        android:padding="@dimen/_12sdp"
        android:orientation="vertical">

        <LinearLayout style="@style/linearDescription"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/_20sdp">

            <hrms.hrms.widget.TextView
                style="@style/spinnerHeader"
                android:text="@string/description" />

            <hrms.hrms.widget.EditText
                android:id="@+id/fragment_leave_form_third_et_desc"
                android:layout_height="match_parent"
                style="@style/spinnerBodyMultiline"
                android:hint="@string/str_enter_description">

            </hrms.hrms.widget.EditText>

        </LinearLayout>
        <hrms.hrms.widget.TextView
            android:id="@+id/fragment_leave_form_third_tv_submit"
            style="@style/btn_submit"
            android:layout_alignParentBottom="true"
            android:text="@string/submit"
            android:textAllCaps="true" />

    </LinearLayout>
</layout>