<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_bg"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        tools:context="com.example.yudiz.hrms.fragment.request.CancelLeaveAttanceFragment">

        <LinearLayout style="@style/linearDescription">

            <hrms.hrms.widget.TextView
                style="@style/spinnerHeader"
                android:text="@string/reason_for_cancellation" />

            <hrms.hrms.widget.EditText
                android:id="@+id/fragment_attendance_request_et_desc"
                style="@style/spinnerBodyMultiline"
                android:maxLines="3"
                android:hint="@string/str_enter_description">

            </hrms.hrms.widget.EditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <hrms.hrms.widget.TextView
                android:id="@+id/fragment_attendance_request_tv_cancel"
                style="@style/btn_submit"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:background="@color/button_gray_cancel"
                android:text="@string/str_cancel"
                android:textAllCaps="true" />

            <hrms.hrms.widget.TextView
                android:id="@+id/fragment_attendance_request_tv_submit"
                style="@style/btn_submit"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:text="@string/submit"
                android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>
</layout>
