<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ic_login_bg"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.26">

            <LinearLayout
                android:layout_width="@dimen/_190sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/ic_logo"
                    android:visibility="gone"
                    android:transitionName="@string/transition_logo" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_hrms_365"
                    android:transitionName="@string/transition_logo_hris" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.44"
            android:paddingLeft="@dimen/_12sdp"
            android:paddingRight="@dimen/_12sdp">

            <RelativeLayout
                android:id="@+id/rr_emp_cname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/act_tv_emp_domain_name_text">

                    <hrms.hrms.widget.EditText
                        android:id="@+id/act_tv_emp_domain_name"
                        style="@style/login_edittext"
                        android:layout_width="match_parent"
                        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/_3sdp"
                        android:hint="@string/company_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/view_line" />

                <hrms.hrms.widget.TextView
                    android:id="@+id/act_tv_emp_domain_name_text"
                    style="@style/login_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:gravity="bottom"
                    android:text=".exedex.in" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rr_emp_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/rr_emp_cname"
                android:layout_marginTop="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <hrms.hrms.widget.EditText
                        android:id="@+id/act_tv_emp_id"
                        style="@style/login_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/company_id" />


                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/view_line" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rr_emp_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/rr_emp_id"
                android:layout_marginTop="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/act_tv_forgot_password"
                    app:passwordToggleEnabled="false"
                    >

                    <hrms.hrms.widget.EditText
                        android:id="@+id/act_tv_emp_password"
                        style="@style/login_edittext"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/_3sdp"
                        android:hint="@string/password" />

                </com.google.android.material.textfield.TextInputLayout>

                <hrms.hrms.widget.TextView
                    android:id="@+id/act_tv_forgot_password"
                    style="@style/login_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:gravity="bottom"
                    android:text="@string/str_forgot_password" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/view_line" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.30"
            android:paddingLeft="@dimen/_12sdp"
            android:paddingRight="@dimen/_12sdp">


            <hrms.hrms.widget.TextView
                android:id="@+id/act_tv_login"
                style="@style/Material.Drawable.Ripple.Wave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:background="@drawable/ic_login_btn_bg"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13sdp"
                android:transitionName="@string/transition_name"
                app:font_type="@string/gotham_medium" />

        </RelativeLayout>
    </LinearLayout>
</layout>