<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/frg_shift_change_ll_filter_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/home_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <hrms.hrms.widget.TextView
                android:id="@+id/frg_shift_change_tv_filter_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="2016"
                android:textColor="@color/request_spinner_text_filter"
                android:textSize="@dimen/_13sdp"
                app:font_type="@string/gotham_book" />

            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:src="@drawable/ic_spinner_qrrow" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_shift_change_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <hrms.hrms.widget.TextView
            android:id="@+id/grg_shift_change_tv_no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_data"
            android:textColor="@color/login_tv_hint"
            android:textSize="@dimen/_20sdp"
            app:font_type="@string/gotham_medium" />
    </LinearLayout>
</layout>